# speedometer

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  sonar-project.properties
commonLib/: CMakeLists.txt  client.h  helpers.h  server.h
commonLib/sources/: client.cpp  helpers.cpp  server.cpp
generator/: CMakeLists.txt
generator/sources/: main.cpp
sources/: main.cpp
sources/app/: app.cpp  app.h  helpers.cpp  helpers.h
sources/gui/: texture.cpp  texture.h
speedometer/: CMakeLists.txt
speedometer/sources/: main.cpp  options.hpp  utils.hpp
speedometer/sources/app/: app.cpp  app.h
speedometer/sources/filter/: Kalman_speed_filter.cpp  Kalman_speed_filter.h
speedometer/sources/gui/: texture.cpp  texture.h
speedometer/sources/quantities/: quantities_processor.cpp  quantities_processor.h
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
